<resources>
    <string name="app_name">SampleLogin</string>
    <string name="join_name">회원가입</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="pwd_confirm">비밀번호 확인</string>
    <string name="email">이메일</string>
    <string name="ok">확인</string>
    <string name="join_done">가입하기</string>
    <string name="done">확인</string>
    <string name="join">회원가입</string>
    <string name="clear">초기화</string>
    <string name="cancel">취소</string>
    <string name="error_join_field_empty">모두 입력해주세요.</string>
    <string name="error_do_not_same_pwd">비밀번호를 확인해주세요.</string>
    <string name="error_discorrent_email">이메일을 확인해주세요.</string>
    <string name="error_fail_login">아이디 혹은 비밀번호를 확인해주세요.</string>
    <string name="login_detail_title">로그인 성공</string>
    <string name="txtInputInfoID">최소 8자 이상</string>
    <string name="txtInputInfoPWD">영문 대문자, 소문자, 숫자, 특수문자를 포함하여 8자 이상</string>
    <string name="txtInputInfoRePWD">비밀번호가 일치하지 않습니다.</string>
    <string name="txtInputInfoEmail">정확한 이메일이 아닙니다.</string>
    <string name="logout">로그아웃</string>
    <string name="error_do_not_input_id">아이디를 입력해주세요.</string>
    <string name="error_exist_id">중복된 아이디가 있습니다.</string>
    <string name="error_do_not_check_id">아이디 중복 체크 확인해 주세요.</string>
</resources>
