<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:text="@string/join_name"
        />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/editIDLayout"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/id"
                android:id="@+id/editID"
                android:layout_width="match_parent"
                android:backgroundTint="@color/white"
                android:maxLines="1"
                android:maxLength="12"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                />
        </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnCheckExistID"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:text="중복체크"
        android:layout_gravity="center_vertical|right"
        android:textColor="@color/white"
        android:background="@drawable/round_green"
        android:layout_height="50dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/editPWDLayout"
        android:layout_width="match_parent"
        android:hint="@string/pwd"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editPWD"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:maxLength="20"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/editPWDConfirmLayout"
        android:layout_width="match_parent"
        android:hint="@string/pwd_confirm"
        android:textColorHint="@color/white"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editPWDConfirm"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:maxLength="20"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/editEmailLayout"
        android:layout_width="match_parent"
        android:textColorHint="@color/white"
        android:hint="@string/email"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:maxLength="20"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnDone"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/join_done"/>
</LinearLayout>