<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:background="@color/black"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/txt_big"
        android:textColor="@color/white"
        android:text="@string/login_detail_title"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp">
        <TextView
            android:text="@string/id"
            android:layout_width="@dimen/txt_join_title_width"
            android:gravity="center"
            android:textSize="@dimen/txt_join_title_size"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            />
        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_join_title_size"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:background="@drawable/round_gray"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/logout" />

</LinearLayout>