<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="@dimen/txt_join_title_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/id"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_join_title_size" />

        <EditText
            android:id="@+id/editID"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_white"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_join_title_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="@dimen/txt_join_title_width"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_join_title_size" />

        <EditText
            android:id="@+id/editPWD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_white"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black" />
    </LinearLayout>

    <!-- Switch 가 아닌 SwitchCompat -->
    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_auto_login"
        style="@style/CustomSwitchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="자동 로그인"
        android:textColor="@color/white"
        android:thumbTint="@color/gray" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round_green"
        android:text="@string/done"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="15dp">

        <Button
            android:id="@+id/btnJoin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_gray"
            android:text="@string/join"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_light_brown"
            android:text="@string/clear"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>